# parlar

./: .gitignore  Cargo.toml  README.md  parlar.py  pyproject.toml
src/: AGENTS.md  main.rs
